--- a/slotthy.css
+++ b/slotthy.css
@@ -1,6 +1,6 @@
 /* 
- *     Typora Theme - Slotthy    /    Author - martilucaa 
- *     githublink
+ *     Typora Theme - Slotthy    /    Author - @martyluca 
+ *     https://github.com/martyluca/slotthy-typora
  */
  @charset "UTF-8";
 
